# betsson-de-assessment

./: .env  .gitignore  README.md  docker-compose.yml
src/invoice-extract-load/: pyproject.toml
src/invoice-extract-load/invoice_extract_load/: app.py  cli.py  main.py  utils.py
src/invoice-transform/: dbt_project.yml  profiles.yml
src/invoice-transform/models/final/: dim_country.sql  dim_customer.sql  dim_date.sql  dim_product.sql  fct_order.sql  fct_order_item.sql
src/invoice-transform/models/staging/: sources.yml  stg_raw__invoices.sql
